@startuml
hide empty members
namespace model.db {
    class Variant {
        int32_t
        int64_t
        string
    }
    interface Query {
        + entity(name : string)
        + where(name : string, condition : Variant)
        + execute() : bool
        + next() : bool
        + get(name : string, [out] value : Variant)
    }
    interface Factory {
        + query() : Query
        + command() : Command
    }
    interface Command {
        + entity(name : string)
        + set(name : string, value : Variant)
        + execute() : bool
    }
    class MongoQuery
    class MongoFactory {
        + {static} instance() : Factory
    }
    class MongoCommand


    Query <|.. MongoQuery
    Factory <|.. MongoFactory
    MongoFactory -* MongoFactory
    Command <|.. MongoCommand
    MongoQuery <. MongoFactory : create
    MongoFactory .> MongoCommand : create
}
@enduml
